# resume

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  PLAN.md  PREPARE.md  PROPOSALS.md  README.md  STATE.md  craco.config.js  eslint.config.mjs  index.html  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.base.json  vite.config.mjs  vitest.config.ts
.claude/agents/: ui-engineer.md
.github/workflows/: ci.yml
apps/dashboard/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/review/: index.html  package.json  vite.config.mjs
apps/site/: index.html  jsconfig.json  package.json  tailwind.config.js  tsconfig.json  vite.config.mjs
data/: resume.json
deploy/: docker-compose.yml
deploy/nginx/: default.conf
docs/: CONTRACTS.md
docs/agents/: README.md  architecture.md  data-contracts.md  frontend.md  operations.md  (+1 more)
public/: index.html
scripts/: capture.mjs  export-seed.mjs  print-pdf.mjs  validate.mjs
services/discovery/: Dockerfile  crontab  pyproject.toml
services/discovery/config/: companies.yml  searches.yml
services/discovery/src/discovery/: boards.py  config.py  cron.py  jobrow.py  jobspy_search.py  main.py  normalize.py  scheduler.py  store.py
services/discovery/tests/: test_config.py  test_cron.py  test_jobrow.py  test_normalize.py  test_scheduler.py
services/discovery/tests/fixtures/: ashby_job.json  greenhouse_job.json  lever_posting.json
src/: App.jsx  index.css  index.jsx  utils.js
tests/: overlay.schema.test.js
(+213 files in other folders)
