[project]
name = "discovery"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.0",       # §10 typed DiscoveredJob validation before upsert
    "python-jobspy>=1.1.82",
    "tzdata>=2024.1",      # zoneinfo data for the scheduler tz in the slim container
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.16",
]

[build-system]
requires = ["uv_build>=0.11"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
